# lb-scrobbler

./: lb-scrobbler.cabal  stack.yaml
src/: Main.hs
src/LBS/: Types.hs
