name:                lb-scrobbler
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/mineo/lb-scrobbler#readme
license:             BSD3
license-file:        LICENSE
author:              Wieland Hoffman
maintainer:          themineo+hackage@gmail.com
copyright:           2015 Wieland Hoffmann
build-type:          Simple
cabal-version:       >=1.10

executable lb-scrobbler
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson==0.9.0.1
                     , base >= 4.7 && < 5
                     , http-client==0.4.21
                     , libmpd==0.9.0.4
                     , safe==0.3.9
                     , text==1.2.1.3
                     , time==1.5.0.1
                     , unix==2.7.1.0
                     , uuid-aeson==0.1.0.0
                     , uuid==1.3.11
                     , wreq==0.4.0.0
